<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.greensoft.secondlife.user.registration.UserRegisterActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        style="@style/edit_text_entry">
        <Button
            android:id="@+id/gotoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/action_login" />
    </LinearLayout>

    <LinearLayout
        style="@style/edit_text_entry">
        <TextView
            style="@style/text_view_title"
            android:text="@string/first_name"/>
        <EditText
            android:id="@+id/firstNameEditText"
            android:text="foo"
            style="@style/edit_text_value" />
    </LinearLayout>

    <LinearLayout
        style="@style/edit_text_entry">
        <TextView
            style="@style/text_view_title"
            android:text="@string/last_name"/>
        <EditText
            android:id="@+id/lastNameEditText"
            android:text="bar"
            style="@style/edit_text_value" />
    </LinearLayout>

    <LinearLayout
        style="@style/edit_text_entry">
        <TextView
            style="@style/text_view_title"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/emailEditText"
            style="@style/edit_text_value"
            android:text="foo@bar.com"/>
    </LinearLayout>

    <LinearLayout
        style="@style/edit_text_entry">
        <TextView
            style="@style/text_view_title"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/passwordEditText"
            style="@style/edit_text_value"
            android:text="foofoo"/>
    </LinearLayout>

    <LinearLayout
        style="@style/edit_text_entry">
        <TextView
            style="@style/text_view_title"
            android:text="@string/confirm_password"/>
        <EditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/edit_text_value"
            android:text="foofoo"/>
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        style="@style/home_button"
        android:text="@string/action_register"/>

</LinearLayout>
</ScrollView>